2017-01-06 Fred Gleason <fredg@paravelsystems.com>
	* Added rdlogeditb(1) in 'src/rdlogeditb/'.
2017-01-06 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bugs that broke the build under MinGW32.
2017-01-06 Fred Gleason <fredg@paravelsystems.com>
	* Added an 'Edit Log' dialog in 'src/rdlogeditb/editlogdialog.cpp'
	and 'src/rdlogeditb/editlogdialog.h'.
2017-01-13 Fred Gleason <fredg@paravelsystems.com>
	* Added audio play and stop buttons to the Edit Log dialog.
2017-01-17 Fred Gleason <fredg@paravelsystems.com>
	* Added a test for MingW32 in 'configure.ac'.
2017-01-17 Fred Gleason <fredg@paravelsystems.com>
	* Added a check of stream state in the 'StreamPlayer::stop()' method.
2017-01-17 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/rdlogeditb/editdialog.cpp' that caused
	previous selection state to be retained into the next exec() session.
2017-01-27 Fred Gleason <fredg@paravelsystems.com>
	* Implemented header controls in the Edit Log Dialog.
	* Added a Date Picker Dialog in 'src/rdlogeditb/datedialog.cpp'
	and 'src/rdlogeditb/datedialog.h'.
2017-01-31 Fred Gleason <fredg@paravelsystems.com>
	* Implemented the ability to Add and Delete logs in rdlogeditb(1).
2017-02-01 Fred Gleason <fredg@paravelsystems.com>
	* Implemented double-click for the log list in rdlogeditb(1).
2017-02-06 Fred Gleason <fredg@paravelsystems.com>
	* Implemented 'Save As' for logs.
2017-02-10 Fred Gleason <fredg@paravelsystems.com>
	* Populated editor buttons in the Edit Log dialog.
2017-02-15 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'LogLine' class in 'src/rdlogeditb/logline.cpp' and
	'src/rdlogeditb/logline.h'.
	* Added a 'Log' class in 'src/rdlogeditb/log.cpp' and
	'src/rdlogeditb/log.h'.
	* Refactored the 'LogModel' class to use the 'Log' data store.
2017-02-15 Fred Gleason <fredg@paravelsystems.com>
	* Added an 'Edit Log Entry' dialog in
	'src/rdlogeditb/editloglinedialog.cpp' and
	'src/rdlogeditb/editloglinedialog.h'.