@@ -28,6 +28,14 @@ src/rdadminb/datetime.cpp
 src/rdadminb/datetime.h
 src/rdadminb/librarymodel.cpp
 src/rdadminb/librarymodel.h
+src/rdadminb/log.cpp
+src/rdadminb/log.h
+src/rdadminb/logline.cpp
+src/rdadminb/logline.h
+src/rdadminb/loglistmodel.cpp
+src/rdadminb/loglistmodel.h
+src/rdadminb/logmodel.cpp
+src/rdadminb/logmodel.h
 src/rdadminb/mpeg1decoder.cpp
 src/rdadminb/mpeg1decoder.h
 src/rdadminb/playerfactory.cpp
@@ -53,6 +61,14 @@ src/rdlibraryb/datetime.cpp
 src/rdlibraryb/datetime.h
 src/rdlibraryb/librarymodel.cpp
 src/rdlibraryb/librarymodel.h
+src/rdlibraryb/log.cpp
+src/rdlibraryb/log.h
+src/rdlibraryb/logline.cpp
+src/rdlibraryb/logline.h
+src/rdlibraryb/loglistmodel.cpp
+src/rdlibraryb/loglistmodel.h
+src/rdlibraryb/logmodel.cpp
+src/rdlibraryb/logmodel.h
 src/rdlibraryb/mpeg1decoder.cpp
 src/rdlibraryb/mpeg1decoder.h
 src/rdlibraryb/playerfactory.cpp
@@ -78,6 +94,14 @@ src/rdlogeditb/datetime.cpp
 src/rdlogeditb/datetime.h
 src/rdlogeditb/librarymodel.cpp
 src/rdlogeditb/librarymodel.h
+src/rdlogeditb/log.cpp
+src/rdlogeditb/log.h
+src/rdlogeditb/logline.cpp
+src/rdlogeditb/logline.h
+src/rdlogeditb/loglistmodel.cpp
+src/rdlogeditb/loglistmodel.h
+src/rdlogeditb/logmodel.cpp
+src/rdlogeditb/logmodel.h
 src/rdlogeditb/mpeg1decoder.cpp
 src/rdlogeditb/mpeg1decoder.h
 src/rdlogeditb/playerfactory.cpp
