@@ -25,6 +25,10 @@ EXTRA_DIST = cmdswitch.cpp cmdswitch.h\
              config.cpp config.h\
              datetime.cpp datetime.h\
              librarymodel.cpp librarymodel.h\
+             log.cpp log.h\
+             logline.cpp logline.h\
+             logmodel.cpp logmodel.h\
+             loglistmodel.cpp loglistmodel.h\
              mpeg1decoder.cpp mpeg1decoder.h\
              playerfactory.cpp playerfactory.h\
              profile.cpp profile.h\
